petclinic-service.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
spec:
  type: NodePort
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30008
  # Removed 'type: NodePort' to use default 'ClusterIP' service type
